# origin

./: .gitmodules
AbstractAndIncaps/: main.cpp
Asyncron/: CMakeLists.txt  main.cpp
ClassAndObjects/task_1/: main.cpp
ClassAndObjects/task_2/: main  main.cpp
Cmakers/1_task/: CMakeLists.txt
Cmakers/1_task/src/: main.cpp
Cmakers/2_task/: CMakeLists.txt
Cmakers/2_task/src/: main.cpp  quadrangle.cpp  triangle.h
Concurent/: CMakeLists.txt  data.cpp  data.h  main.cpp
Error_first/: extended_array.h  main.cpp  test.h
Exceptions_and_error_handling/Error_first/: main.cpp
Exceptions_and_error_handling/Error_second/: Makefile  fig_errorCheck.h  figure_base.cpp  figure_types.h  main.cpp  quadrangle.h  triangle.cpp  triangle.h
INI_parser/: CONF.ini  Makefile  main  main.cpp
Mnogopotok/: CMakeLists.txt  main.cpp
Move/: main  main.cpp
NasledAndPolimorf/: Makefile  main.cpp  outs.txt
Overloading_Operators/: main.cpp
Racess/: CMakeLists.txt
Racess/app/: CMakeLists.txt  main.cpp
Racess/libMassive/: CMakeLists.txt  massive.cpp  massive.h
Racess/libTransport/: CMakeLists.txt  race.cpp  race.h  transport.cpp  transport.h
SQL_DB_create/: CMakeLists.txt  main.cpp
STL1/: Makefile  main.cpp
STL2/: main.cpp
file&bibl/: Makefile  counter.cpp  counter.h  figure_base.cpp  figure_base.h  figure_types.h  main.cpp  math_operation.cpp  math_operation.h  quadrangle.h
preANDmacros/: Makefile  main.cpp
ptr/: main.cpp
smart_array/: main.cpp
structAndenum/task_1/: main.cpp
structAndenum/task_2/: main.cpp
structAndenum/task_3/: main.cpp
threDCourse/: CMakeLists.txt
threDCourse/include/: safe_queue.h  thread_pool.h
threDCourse/src/: main.cpp
typename/: Makefile  main.cpp
